样式修改 日期输入

--- a/webcontent/birt/styles/dialogbase_rtl.css
+++ b/webcontent/birt/styles/dialogbase_rtl.css
@@ -160,7 +160,7 @@
 {
 	float: right;
 	cursor: pointer;
-	height: 24px;
+	min-height: 24px;
 	width: 80px;
 	overflow: hidden;
 	color: black; /* Font color */ 
