--- a/webcontent/birt/styles/dialogbase.css
+++ b/webcontent/birt/styles/dialogbase.css
@@ -174,7 +174,7 @@
 {
 	float: left;
 	cursor: pointer;
-	height: 24px;
+	min-height: 24px;
 	width: 80px;
 	overflow: hidden;
 	color: black; /* Font color */
